# OpenCSG

./: CMakeLists.txt
OpenCSG.xcodeproj/: project.pbxproj
RenderTexture/: CMakeLists.txt
example/: CMakeLists.txt
src/: CMakeLists.txt  batch.cpp  renderSCS.cpp  scissorMemo.cpp
